# sd-licensekeygenerator

./: README.md  sd-licensekeygenerator.cabal  stack.yaml
src/SD/: LicenseKeyGenerator.hs
