name:                sd-licensekeygenerator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/shlok/sd-licensekeygenerator
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    default-language:    Haskell2010
    default-extensions:  OverloadedStrings
    exposed-modules:     SD.LicenseKeyGenerator
    build-depends:       base >= 4.7 && < 5
                       , bytestring >= 0.10.8.1
                       , HsOpenSSL >= 0.11.1.1
                       , sandi >= 0.4.0
                       , text >= 1.2.2.1
                       , transformers >= 0.5.2.0

source-repository head
    type:     git
    location: https://github.com/shlok/sd-licensekeygenerator
